# pkg/cases/handler.go
@@ -27,7 +27,7 @@ func (h *CaseHandler) GetLastCase(c echo.Context) error {
 // @Produce json
 // @Param patientID path uint true "patient ID"
 // @Param department query string false "department name" nil
-// @Success 200 {array} api.ReturnedData{data=[]Case}
+// @Success 200 {object} api.ReturnedData{data=[]Case}
 // @Router /patient/{patientID} [GET]
 func (h *CaseHandler) GetCasesByPatientID(c echo.Context) error {
 	// ...
@@ -144,7 +144,7 @@ func (h *CaseHandler) GetPrescriptionByPrescriptionID(c echo.Context) error {
 // @Tags Case
 // @Produce json
 // @Param caseID path uint true "case ID"
-// @Success 200 {array} api.ReturnedData{data=[]Prescription}
+// @Success 200 {object} api.ReturnedData{data=[]Prescription}
 // @Router /patient/{patientID}/case/{caseID}/prescription  [GET]
 func (h *CaseHandler) GetPrescriptionByCaseID(c echo.Context) error {
 	// ...
